src/ports/postgres/modules/deep_learning/test/small.sql_in

--\i m4_regexp(MODULE_PATHNAME,
--             `\(.*\)libmadlib\.so',
--             `\1../../modules/deep_learning/test/madlib_keras.setup.sql_in'
--)

m4_define(<!PATH_TO_SQL_TESTS!>, <!
    m4_regexp(MODULE_PATHNAME,
              `\(.*\)libmadlib\.so',
              `\1../../modules/deep_learning/test/'$1
!>)

\i PATH_TO_SQL_TESTS(`madlib_keras.setup.sql_in')

